# StreetScope

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  requirements.txt  ruff.toml  tsan.supp  valgrind-python.supp
include/streetscope/frame_pipeline/: frame.h  frame_loop.h  processed_frame.h  ring_buffer.h
include/streetscope/inference/: coreml_detector.h  detection.h  letterbox.h  metal_tone_mapper.h  nms.h
include/streetscope/plan_executor/: plan.h  plan_executor.h
include/streetscope/simd/: accumulator.h  isp_correction.h  pipeline.h  subtractor.h  tone_map.h
src/cpp/bindings/: CMakeLists.txt  pipeline_module.cpp  simd_module.cpp
src/cpp/frame_pipeline/: CMakeLists.txt  frame.cpp  frame_loop.cpp
src/cpp/objcpp/: CMakeLists.txt  coreml_detector.mm  detection.cpp  letterbox.cpp  metal_tone_mapper.mm  nms.cpp  videotoolbox_decoder.h  videotoolbox_decoder.mm
src/cpp/plan_executor/: CMakeLists.txt  plan_executor.cpp
src/cpp/simd/: CMakeLists.txt  accumulator.cpp  isp_correction.cpp  pipeline.cpp  subtractor.cpp  tone_map.cpp
src/python/bootstrap/: stream_discovery.py
src/python/core/: background.py  stabilizer.py  stream.py
src/python/isp/: converter.py  estimator.py  quality.py
src/python/perception/: detector.py  tracker.py
src/python/plan/: allocator.py  serializer.py
tests/cpp/: CMakeLists.txt  test_accumulator.cpp  test_detection.cpp  test_frame_loop.cpp  test_isp_correction.cpp  test_letterbox.cpp  test_metal_tone_map.mm  test_nms.cpp  test_pipeline.cpp  test_plan_executor.cpp  test_ring_buffer.cpp  test_subtractor.cpp  test_tone_map.cpp
tests/python/: test_async_detector.py  test_background.py  test_detector.py  test_frame_grabber.py  test_isp.py  test_pipeline_fused.py  test_plan_executor.py  test_plan_serializer.py  test_quality.py  test_simd_kernels.py  test_stabilizer.py  test_stream.py  test_stream_discovery.py  test_tracker.py
tests/python/golden/process_frame/: background.npy  display_00.npy  display_01.npy  display_02.npy  display_03.npy  display_04.npy  display_05.npy  display_06.npy  display_07.npy  display_08.npy  display_09.npy  mask_01.npy  mask_02.npy  mask_03.npy  mask_04.npy  mask_05.npy  mask_06.npy  mask_07.npy  mask_08.npy  mask_09.npy
tools/: background_viewer.py  benchmark_coreml.py  benchmark_metal.py  benchmark_simd.py  capture_frames.py  detection_viewer.py  export_pt2coreml.py  export_pt2onnx.py  fetch_models.py  isp_viewer.py  pipeline_viewer.py  stream_player.py
